# Physical-XMR-Verifier

./: CMakeLists.txt  LICENSE  Makefile  README.md  get_libwallet_api.sh
src/: CMakeLists.txt  testnet.h.in
src/common/: message_writer.h  sha256.h
src/sample_certificate/: CMakeLists.txt  extended_wallet.cpp  extended_wallet.h  sample_certificate.cpp
src/verifier/: CMakeLists.txt  certificate_verifier.cpp  certificate_verifier.h
test_certificates/: README  test_cert_01.txt  test_cert_02.txt  test_cert_02_err_addr.txt  test_cert_02_err_amount.txt  test_cert_02_err_keyimage.txt  test_cert_02_err_pubkey.txt  test_cert_02_err_sig.txt  test_cert_02_err_txid.txt  test_cert_02_err_viewkey.txt
